Fixed bug where background-image was not showing

--- a/src/style.css
+++ b/src/style.css
@@ -38,8 +38,9 @@ img {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url("https://images.pexels.com/photos/1907227/pexels-photo-1907227.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
+    background-image: url('https://wallpaperaccess.com/full/9129421.png');
     background-size: cover;
+    background-position: center;
     z-index: -1; /* To place the background image behind other elements */
 }
 
